[Init] Support Virtual Class Init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,42 +2,47 @@
 cmake_minimum_required(VERSION 3.22)
 project(tablegen-py)
 
-if(NOT DEFINED pybind11_SOURCE_DIR)
-  message(STATUS "Not find pybind11 try to download one")
-  include(cmake/pybind11.cmake)
+#if(NOT DEFINED pybind11_SOURCE_DIR)
+#  message(STATUS "Not find pybind11 try to download one")
+#  include(cmake/pybind11.cmake)
+#endif()
+find_package(Python COMPONENTS Interpreter Development)
+add_subdirectory(pybind11)
+
+if(NOT DEFINED LLVM_MAIN_SRC_DIR)
+    set(LLVM_PREFIX /home/ycsu/Develop/TableGen.py-dev/llvm-project/install)
+    set(LLVM_DIR ${LLVM_PREFIX}/lib/cmake/llvm)
+    find_package(LLVM REQUIRED CONFIG)
+    message(STATUS "Using LLVM ${LLVM_PACKAGE_VERSION}")
+    add_definitions(${LLVM_DEFINITIONS})
+    include_directories(${LLVM_INCLUDE_DIRS})
+    link_directories(${LLVM_LIBRARY_DIR})
+    list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+    include(AddLLVM)
 endif()
-add_subdirectory(${pybind11_SOURCE_DIR})
 
-set(LLVM_PREFIX /home/ycsu/Develop/TableGen.py-dev/llvm-project/install)
-set(LLVM_DIR ${LLVM_PREFIX}/lib/cmake/llvm)
-find_package(LLVM REQUIRED CONFIG)
-
-message(STATUS "Using LLVM ${LLVM_PACKAGE_VERSION}")
-
-add_definitions(${LLVM_DEFINITIONS})
-include_directories(${LLVM_INCLUDE_DIRS})
-link_directories(${LLVM_LIBRARY_DIR})
-
-list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
-include(AddLLVM)
 set (CMAKE_CXX_STANDARD 14)
-
-set(LLVM_LINK_COMPONENTS TableGen Support)
-# set(CMAKE_CXX_FLAGS "-g -O0 -fprofile-arcs -ftest-coverage")
-# set(CMAKE_C_FLAGS   "-g -O0 -fprofile-arcs -ftest-coverage")
 
 pybind11_add_module(tablegen 
     SHARED
     main_module.cpp
+    lib/RecordKeeper.cpp
+    lib/Init.cpp
     lib/Record.cpp
     lib/BindType.cpp
 )
 
+message(STATUS "install tablegen binding to ${CMAKE_CURRENT_SOURCE_DIR}/../src/tablegen")
+
+set_target_properties(tablegen
+    PROPERTIES
+    OUTPUT_NAME binding
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../src/tablegen"
+)
+
 target_include_directories(tablegen PUBLIC
-    /home/ycsu/Develop/TableGen.py-dev/llvm-project/llvm/lib/TableGen
+    ${LLVM_MAIN_SRC_DIR}/lib/TableGen
     include/
 )
 
-llvm_map_components_to_libnames(
-    llvm_libs ${LLVM_LINK_COMPONENTS})
-target_link_libraries(tablegen PRIVATE ${llvm_libs})
+target_link_libraries(tablegen PRIVATE LLVMTableGen LLVMSupport)
