--- a/pyTableGen/pyproject.toml
+++ b/pyTableGen/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = "setuptools.build_meta"
 requires = ["setuptools", "wheel"]
 
 [project]
-name = "mypackage"
+name = "py-tblgen"
 description = "My package description"
 readme = "README.rst"
 requires-python = ">=3.7"
