--- a/pyTableGen/pyproject.toml
+++ b/pyTableGen/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 ]
 dependencies = [
     "requests",
+    "pytest",
     'importlib-metadata; python_version<"3.8"',
 ]
 dynamic = ["version"]
